--- a/css/about_style.css
+++ b/css/about_style.css
@@ -64,7 +64,11 @@
     }
 
     .about-intro .name {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
+    }
+
+    .about-intro p{
+        font-size: 0.9rem;
     }
 
 }
