--- a/css/masthead_style.css
+++ b/css/masthead_style.css
@@ -10,7 +10,7 @@
     height: 100%;
     min-height: 35rem;
     padding: 15rem 0;
-    background: url(../img/header3.jpg);
+    background: url(../imgs/header3.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
