--- a/css/main_style.css
+++ b/css/main_style.css
@@ -4,7 +4,7 @@ body {
     overflow-y: scroll;
     overflow-x: scroll;
     -ms-overflow-style: none;
-    display: none;
+    /* display: none; */
 }
 
 html  {
