--- a/css/skills_style.css
+++ b/css/skills_style.css
@@ -44,7 +44,7 @@
 }
 
 .skill-section .para    {
-    font-family: 'Sura', serif !important;
+    font-family: Gotham,Helvetica,Arial,sans-serif;
     font-size: 1rem;
 }
 
