--- a/css/experience_style.css
+++ b/css/experience_style.css
@@ -27,14 +27,16 @@
     box-shadow: 3px 3px 3px 3px rgba(0,0,0,.75);
 }
 
-.experience-section .ex-heads .img {
+ .img {
     width: 40px;
     height: 40px;
     margin-right: 15px;
     display: inline-block;
     vertical-align: middle;
     position: relative;
-    top: -3px;
+    /* top: -3px; */
+    margin-top: auto;
+    margin-bottom: auto;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100%;
@@ -71,7 +73,7 @@
         font-size: 1.15rem;
     }
 
-    .experience-section .ex-heads .img {
+    .img {
         width: 33px;
         height: 33px;
         margin-right: 12px;
@@ -95,7 +97,7 @@
         font-size: 1.05rem;
     }
 
-    .experience-section .ex-heads .img {
+    .img {
         width: 29px;
         height: 29px;
         margin-right: 7px;
@@ -130,7 +132,7 @@
         min-width: 0px !important;
     }
 
-    .experience-section .ex-heads .img {
+    .img {
         width: 28px;
         height: 28px;
         margin-right: 5px;
@@ -165,7 +167,7 @@
         min-width: 0px !important;
     }
 
-    .experience-section .ex-heads .img {
+    .img {
         width: 26px;
         height: 26px;
         margin-right: 3px;
@@ -216,7 +218,7 @@
         min-width: 0px !important;
     }
 
-    .experience-section .ex-heads .img {
+    .img {
         width: 18px;
         height: 18px;
         margin-right: 2px;
