--- a/css/masthead_style.css
+++ b/css/masthead_style.css
@@ -7,7 +7,7 @@
 .masthead {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     min-height: 35rem;
     padding: 15rem 0;
     background: url(../img/header3.jpg);
@@ -30,11 +30,15 @@
     animation-duration: 1.5s;
     animation-delay: .5s;
     animation-fill-mode: forwards;
+    transition: height 1s ;
 }
 
+.headLoad {
+    height: 8rem !important;
+}
 
 .masthead h2 {
-    max-width: 20rem;
+    /* max-width: 20rem; */
     font-size: 1.25rem;
     animation-duration: 1.5s;
     animation-delay: 2s;
@@ -50,7 +54,7 @@
     }
 
     .masthead h2 {
-        font-size: 1.15rem;
+        font-size: 0.85rem;
     }
 }
 
@@ -78,18 +82,18 @@
     }
 
     .masthead h2 {
-        font-size: 0.815rem;
+        font-size: 1.15rem;
     }
 
 }
 
 @media (max-width: 408px) {
     .masthead h1 {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
     }
 
     .masthead h2 {
-        font-size: 0.715rem;
+        font-size: 0.85rem;
     }
 
 }
@@ -115,3 +119,27 @@
 .appearonload {
     opacity: 0;
 }
+
+@media (max-width: 999px) {
+    .headLoad {
+        height: 6rem !important;
+    }
+}
+
+@media (max-width: 768px) {
+    .headLoad {
+        height: 4.5rem !important;
+    }
+}
+
+@media (max-width: 549px) {
+    .headLoad {
+        height: 3.5rem !important;
+    }
+}
+
+/* @media (max-width: 410px) {
+    .headLoad {
+        height: 2.75rem !important;
+    }
+} */
